--- a/backend/views/user/contact.ejs
+++ b/backend/views/user/contact.ejs
@@ -272,7 +272,7 @@
           </ul><!-- /.navigation__list -->
         </div><!-- /.overflow-hidden -->
       </div><!-- /.container -->
-      <div class="border-top mt-auto pb-2">
+      <div class="border-top mobile-sidebar-social  mt-auto pb-2">
         <a href="">
           <a href="<%= user ? '/account' : '/auth/login' %>">
             <div class="customer-links container  mt-4 mb-2 pb-1">
@@ -308,7 +308,7 @@
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/" class="footer__social-link d-block">
+              <a href="https://www.instagram.com/stayrare.in?igsh=MXZ6ZzlpcjVod3Nscw==" class="footer__social-link d-block">
                 <svg class="svg-icon svg-icon_instagram" width="14" height="13" viewBox="0 0 14 13"
                   xmlns="http://www.w3.org/2000/svg">
                   <use href="#icon_instagram" />
@@ -542,7 +542,7 @@
           <ul class="sub-menu__list list-unstyled">
             <li class="sub-menu__item"><a href="/" class="menu-link menu-link_us-s">Home</a></li>
             <li class="sub-menu__item"><a href="/about" class="menu-link menu-link_us-s">About Us</a></li>
-            <li class="sub-menu__item"><a href="/wishlist" class="menu-link menu-link_us-s"></a>Wishlist</li>
+                   <li class="sub-menu__item"><a href="/wishlist" class="menu-link menu-link_us-s">Wishlist</a></li>
             <li class="sub-menu__item"><a href="/blogs" class="menu-link menu-link_us-s">Blogs</a></li>
             <li class="sub-menu__item"><a href="/contact" class="menu-link menu-link_us-s">Contact Us</a></li>
           </ul>
@@ -591,7 +591,7 @@
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/" class="footer__social-link d-block">
+              <a href="https://www.instagram.com/stayrare.in?igsh=MXZ6ZzlpcjVod3Nscw==" class="footer__social-link d-block">
                 <svg class="svg-icon svg-icon_instagram" width="14" height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg"><use href="#icon_instagram" /></svg>
               </a>
             </li>
