--- a/backend/views/user/error.ejs
+++ b/backend/views/user/error.ejs
@@ -273,7 +273,7 @@
         </div><!-- /.overflow-hidden -->
       </div><!-- /.container -->
 
-       <div class="border-top mt-auto pb-2">
+       <div class="border-top mobile-sidebar-social mt-auto pb-2">
         <a href="">
           <a href="<%= user ? '/account' : '/auth/login' %>">
             <div class="customer-links container  mt-4 mb-2 pb-1">
@@ -291,7 +291,7 @@
 
           <ul class="container social-links d-flex justify-content-around list-unstyled d-flex flex-wrap mb-0">
             <li>
-              <a href="https://www.facebook.com/" class="footer__social-link d-block ps-0">
+              <a href="https://www.facebook.com/profile.php?id=61578094636322 " class="footer__social-link d-block ps-0">
                 <svg class="svg-icon svg-icon_facebook" width="9" height="15" viewBox="0 0 9 15"
                   xmlns="http://www.w3.org/2000/svg">
                   <use href="#icon_facebook" />
@@ -309,7 +309,7 @@
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/" class="footer__social-link d-block">
+              <a href="https://www.instagram.com/stayrare.in?igsh=MXZ6ZzlpcjVod3Nscw==" class="footer__social-link d-block">
                 <svg class="svg-icon svg-icon_instagram" width="14" height="13" viewBox="0 0 14 13"
                   xmlns="http://www.w3.org/2000/svg">
                   <use href="#icon_instagram" />
