--- a/backend/views/user/home.ejs
+++ b/backend/views/user/home.ejs
@@ -364,7 +364,7 @@
         </div><!-- /.overflow-hidden -->
       </div><!-- /.container -->
 
-      <div class="border-top mt-auto pb-2">
+      <div class="border-top mobile-sidebar-social mt-auto pb-2">
         <a href="">
           <a href="<%= user ? '/account' : '/auth/login' %>">
             <div class="customer-links container  mt-4 mb-2 pb-1">
@@ -378,7 +378,7 @@
 
           <ul class="container social-links d-flex justify-content-around list-unstyled d-flex flex-wrap mb-0">
             <li>
-              <a href="https://www.facebook.com/" class="footer__social-link d-block ps-0">
+              <a href="https://www.facebook.com/profile.php?id=61578094636322 " class="footer__social-link d-block ps-0">
                 <svg class="svg-icon svg-icon_facebook" width="9" height="15" viewBox="0 0 9 15"
                   xmlns="http://www.w3.org/2000/svg">
                   <use href="#icon_facebook" />
@@ -396,7 +396,7 @@
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/" class="footer__social-link d-block">
+              <a href="https://www.instagram.com/stayrare.in?igsh=MXZ6ZzlpcjVod3Nscw==" class="footer__social-link d-block">
                 <svg class="svg-icon svg-icon_instagram" width="14" height="13" viewBox="0 0 14 13"
                   xmlns="http://www.w3.org/2000/svg">
                   <use href="#icon_instagram" />
@@ -474,7 +474,7 @@
       <div class="heeader-top__right flex-1 d-flex gap-1 justify-content-end">
         <ul class="social-links list-unstyled d-flex flex-wrap mb-0">
           <li>
-            <a href="#" class="footer__social-link d-block color-white">
+            <a href="https://www.facebook.com/profile.php?id=61578094636322 " class="footer__social-link d-block color-white">
               <svg class="svg-icon svg-icon_facebook" width="9" height="15" viewBox="0 0 9 15"
                 xmlns="http://www.w3.org/2000/svg">
                 <use href="#icon_facebook" />
@@ -491,7 +491,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="footer__social-link d-block color-white">
+            <a href="https://www.instagram.com/stayrare.in?igsh=MXZ6ZzlpcjVod3Nscw==" class="footer__social-link d-block color-white">
               <svg class="svg-icon svg-icon_instagram" width="14" height="13" viewBox="0 0 14 13"
                 xmlns="http://www.w3.org/2000/svg">
                 <use href="#icon_instagram" />
@@ -1919,7 +1919,7 @@
           <ul class="sub-menu__list list-unstyled">
             <li class="sub-menu__item"><a href="/" class="menu-link menu-link_us-s">Home</a></li>
             <li class="sub-menu__item"><a href="/about" class="menu-link menu-link_us-s">About Us</a></li>
-            <li class="sub-menu__item"><a href="/wishlist" class="menu-link menu-link_us-s"></a>Wishlist</li>
+              <li class="sub-menu__item"><a href="/wishlist" class="menu-link menu-link_us-s">Wishlist</a></li>
             <li class="sub-menu__item"><a href="/blogs" class="menu-link menu-link_us-s">Blogs</a></li>
             <li class="sub-menu__item"><a href="/contact" class="menu-link menu-link_us-s">Contact Us</a></li>
           </ul>
@@ -1958,7 +1958,7 @@
           </form>
           <ul class="social-links list-unstyled d-flex flex-wrap mb-0 mt-3">
             <li>
-              <a href="https://www.facebook.com/" class="footer__social-link d-block">
+              <a href="https://www.facebook.com/profile.php?id=61578094636322 " class="footer__social-link d-block">
                 <svg class="svg-icon svg-icon_facebook" width="9" height="15" viewBox="0 0 9 15"
                   xmlns="http://www.w3.org/2000/svg">
                   <use href="#icon_facebook" />
@@ -1975,7 +1975,7 @@
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/" class="footer__social-link d-block">
+              <a href="https://www.instagram.com/stayrare.in?igsh=MXZ6ZzlpcjVod3Nscw==" class="footer__social-link d-block">
                 <svg class="svg-icon svg-icon_instagram" width="14" height="13" viewBox="0 0 14 13"
                   xmlns="http://www.w3.org/2000/svg">
                   <use href="#icon_instagram" />
