--- a/backend/views/user/terms-conditions.ejs
+++ b/backend/views/user/terms-conditions.ejs
@@ -708,7 +708,7 @@
         </div><!-- /.overflow-hidden -->
       </div><!-- /.container -->
 
-      <div class="border-top mt-auto pb-2">
+      <div class="border-top mobile-sidebar-social mt-auto pb-2">
         <a href="">
           <a href="<%= user ? '/account' : '/auth/login' %>">
             <div class="customer-links container  mt-4 mb-2 pb-1">
@@ -726,7 +726,7 @@
 
           <ul class="container social-links d-flex justify-content-around list-unstyled d-flex flex-wrap mb-0">
                <li>
-              <a href="https://www.facebook.com/" class="footer__social-link d-block">
+              <a href="https://www.facebook.com/profile.php?id=61578094636322 " class="footer__social-link d-block">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0,0,256,256">
 <g fill="black" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M17.525,9h-3.525v-2c0,-1.032 0.084,-1.682 1.563,-1.682h1.868v-3.18c-0.909,-0.094 -1.823,-0.14 -2.738,-0.138c-2.713,0 -4.693,1.657 -4.693,4.699v2.301h-3v4l3,-0.001v9.001h4v-9.003l3.066,-0.001z"></path></g></g>
 </svg>
@@ -740,7 +740,7 @@
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/" class="footer__social-link d-block">
+              <a href="https://www.instagram.com/stayrare.in?igsh=MXZ6ZzlpcjVod3Nscw==" class="footer__social-link d-block">
                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0,0,256,256">
 <g fill="black" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M8,3c-2.757,0 -5,2.243 -5,5v8c0,2.757 2.243,5 5,5h8c2.757,0 5,-2.243 5,-5v-8c0,-2.757 -2.243,-5 -5,-5zM8,5h8c1.654,0 3,1.346 3,3v8c0,1.654 -1.346,3 -3,3h-8c-1.654,0 -3,-1.346 -3,-3v-8c0,-1.654 1.346,-3 3,-3zM17,6c-0.55228,0 -1,0.44772 -1,1c0,0.55228 0.44772,1 1,1c0.55228,0 1,-0.44772 1,-1c0,-0.55228 -0.44772,-1 -1,-1zM12,7c-2.757,0 -5,2.243 -5,5c0,2.757 2.243,5 5,5c2.757,0 5,-2.243 5,-5c0,-2.757 -2.243,-5 -5,-5zM12,9c1.654,0 3,1.346 3,3c0,1.654 -1.346,3 -3,3c-1.654,0 -3,-1.346 -3,-3c0,-1.654 1.346,-3 3,-3z"></path></g></g>
 </svg>
@@ -1038,7 +1038,7 @@
           <ul class="sub-menu__list list-unstyled">
             <li class="sub-menu__item"><a href="/" class="menu-link menu-link_us-s">Home</a></li>
             <li class="sub-menu__item"><a href="/about" class="menu-link menu-link_us-s">About Us</a></li>
-            <li class="sub-menu__item"><a href="/wishlist" class="menu-link menu-link_us-s"></a>Wishlist</li>
+                  <li class="sub-menu__item"><a href="/wishlist" class="menu-link menu-link_us-s">Wishlist</a></li>
             <li class="sub-menu__item"><a href="/blogs" class="menu-link menu-link_us-s">Blogs</a></li>
             <li class="sub-menu__item"><a href="/contact" class="menu-link menu-link_us-s">Contact Us</a></li>
           </ul>
@@ -1075,7 +1075,7 @@
           </form>
                  <ul class="social-links list-unstyled d-flex flex-wrap mb-0 mt-3">
             <li>
-              <a href="https://www.facebook.com/" class="footer__social-link d-block">
+              <a href="https://www.facebook.com/profile.php?id=61578094636322 " class="footer__social-link d-block">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0,0,256,256">
 <g fill="#fffcfc" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M17.525,9h-3.525v-2c0,-1.032 0.084,-1.682 1.563,-1.682h1.868v-3.18c-0.909,-0.094 -1.823,-0.14 -2.738,-0.138c-2.713,0 -4.693,1.657 -4.693,4.699v2.301h-3v4l3,-0.001v9.001h4v-9.003l3.066,-0.001z"></path></g></g>
 </svg>
@@ -1089,7 +1089,7 @@
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/" class="footer__social-link d-block">
+              <a href="https://www.instagram.com/stayrare.in?igsh=MXZ6ZzlpcjVod3Nscw==" class="footer__social-link d-block">
                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0,0,256,256">
 <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M8,3c-2.757,0 -5,2.243 -5,5v8c0,2.757 2.243,5 5,5h8c2.757,0 5,-2.243 5,-5v-8c0,-2.757 -2.243,-5 -5,-5zM8,5h8c1.654,0 3,1.346 3,3v8c0,1.654 -1.346,3 -3,3h-8c-1.654,0 -3,-1.346 -3,-3v-8c0,-1.654 1.346,-3 3,-3zM17,6c-0.55228,0 -1,0.44772 -1,1c0,0.55228 0.44772,1 1,1c0.55228,0 1,-0.44772 1,-1c0,-0.55228 -0.44772,-1 -1,-1zM12,7c-2.757,0 -5,2.243 -5,5c0,2.757 2.243,5 5,5c2.757,0 5,-2.243 5,-5c0,-2.757 -2.243,-5 -5,-5zM12,9c1.654,0 3,1.346 3,3c0,1.654 -1.346,3 -3,3c-1.654,0 -3,-1.346 -3,-3c0,-1.654 1.346,-3 3,-3z"></path></g></g>
 </svg>
