--- a/backend/views/user/login.ejs
+++ b/backend/views/user/login.ejs
@@ -474,7 +474,7 @@
 
       <div class="logo">
         <a href="/">
-          <img style="top: 50%;" src="images/stayrare/logo.png" alt="Stayrare" class="logo__image d-block">
+          <img style="top: 50%;" src="/images/stayrare/logo.png" alt="Stayrare" class="logo__image d-block">
         </a>
       </div><!-- /.logo -->
 
